# GENAI_development

./: README.md  pyproject.toml  requirements.txt
Chatbots/: app.py  openllama.py
RAG/: simplerag.ipynb
agents/: agents.ipynb
api/: app.py  client.py
chains/: retriever.ipynb
groq/: app.py
